--- a/TODO.txt
+++ b/TODO.txt
@@ -19,14 +19,14 @@
 - [X] We can change the Board to collection of Squares
 - [-] We can add an ADD operation to Square class
 		-- We attempted this and realized that it will not clean or simplify the code.
-- [ ] We can implement the logic to check different directions 
+- [X] We can implement the logic to check different directions 
 
 
 2021-08-24
 - We commented out the failing test
 - We replaced char[,] with Square[,] in Board and made the changes in other classes
 - We move UpdateSquare from Game to Board
-- [ ] Now that Square has a new property as Colour, maybe we should revisit list of White, Black, and Blank, and check for possibility of improvements.
+- [X] Now that Square has a new property as Colour, maybe we should revisit list of White, Black, and check for possibility of improvements.
 
 2021-08-31
 - replaced Int[] within Direction with a new Vector classs.
@@ -39,3 +39,9 @@ but in Square class, where we can define operator method, we don't have that inf
 - We also added a test that required going to UP direction but that failed
 - We noticed there are some uncertainity on how directions are defined. We fixed UP and DOWn but the rest of directions must be fixed.
 - We ended up with most of tests failing and that's related to how navigation on board is defined.
+
+2021-09-21
+- We fixed all directions
+- We got rid of _blackCounters and _whiteCounters lists
+- We retired one GetNextSquare in Game, replaced it with Board.Add
+- [ ] We should revisit list of Blank, and check for possibility of improvements
